# pcis

./: CMakeLists.txt  README.md
data/: time_results.txt
inc/: cesar.h  memory.h  neander.h  ramses.h  utils.h
inc/cesar/: AddressingMode.hpp  Cache.hpp  Cesar.hpp  Clock.hpp  Flag.hpp  InstrucaoCesar.hpp  Instruction.hpp  Memoria.hpp  Opcode.hpp  OpcodeCesar.hpp  PipelineStage.hpp  ULA.hpp  ULACesar.hpp  cesar.h
inc/neander/: Flag.hpp  Instrucao.hpp  Memoria.hpp  Multiplexador.hpp  Neander.hpp  Opcode copy.hpp  Opcode.hpp  ULA.hpp  instrucao.h  main  main.cpp  memory.h  neander.h  opcode.h  pc.h  pc.hpp
inc/ramses/: Flag.hpp  Instrucao.hpp  Memoria.hpp  Multiplexador.hpp  Opcode.hpp  ULA.hpp  ramses.h  ramses.hpp
instruction-set-simulator/: CMakeLists.txt  README.md
instruction-set-simulator/inc/: utils.h
instruction-set-simulator/src/: cesar.cpp
instruction-set-simulator/src/main/: Utils.cpp  main.cpp  utils.cpp
src/: cesar.cpp  main.cpp  memory.cpp  neander.cpp
src/cesar/: cesar.cpp  memoria.cpp
src/main/: main.cpp
src/neander/: instrucao.cpp  main.cpp  memoria.cpp  multiplexador.cpp  neander.cpp  ula.cpp
src/ramses/: instrucao.cpp  memoria.cpp  multiplexador.cpp  ramses.cpp  ula.cpp
tests/: CMakeLists.txt  data.txt  instructions.txt  main.cpp  main_1.cpp
tests/neander/sub_8bits/: data.txt  instructions.txt
